Fix button wrapping, add better focus indicators

--- a/src/components/Restaurant/Restaurant.scss
+++ b/src/components/Restaurant/Restaurant.scss
@@ -20,20 +20,25 @@
 }
 
 .heading {
-  cursor: pointer;
   font-size: 28px;
   font-weight: bold;
   margin: 0;
   min-height: 30px;
 
-  button {
+  span {
     letter-spacing: -.5px;
     margin-right: .25em;
   }
 }
 
 .headingButton {
-  @include plain-button;
+  cursor: pointer;
+  outline: none;
+  vertical-align: middle;
+
+  &:focus {
+    text-decoration: underline;
+  }
 }
 
 .restaurantNameFormContainer {
